        PR libstdc++/14026         * libsupc++/eh_catch.cc (__cxa_begin_catch): Don't adjust         uncaughtExceptions during nested catch rethrow.         * testsuite/18_support/14026.cc: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@77492 138bc75d-0d04-0410-961f-82ee72b054a4